--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
         <string name="save_placemark"> Save Placemark </string>
         <string name="button_addImage"> Add Image </string>
         <string name="select_placemark_image">Select placemark image</string>
+        <string name="change_placemark_image">Change placemark image</string>
+        <string name="button_location">Set Location</string>
+        <string name="title_activity_map">Map</string>
 </resources>
